Update dependencies (#5070)